--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -481,6 +481,9 @@ CONFIG_STAGING=y
 CONFIG_ASHMEM=y
 CONFIG_ION=y
 CONFIG_ION_DUMMY=y
+CONFIG_ION_DUMMY_UNMAPPED_HEAP=y
+CONFIG_ION_DUMMY_UNMAPPED_BASE=0x3e800000
+CONFIG_ION_DUMMY_UNMAPPED_SIZE=0x00400000
 CONFIG_FIQ_DEBUGGER_NO_SLEEP=y
 CONFIG_FIQ_DEBUGGER_CONSOLE=y
 CONFIG_FIQ_DEBUGGER_CONSOLE_DEFAULT_ENABLE=y
