Kernel changes for SchrodinText on HiKey

--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -1,3 +1,4 @@
+CONFIG_ARM64=y
 CONFIG_POSIX_MQUEUE=y
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
@@ -503,7 +504,7 @@ CONFIG_PHY_XGENE=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_TEE=y
-CONFIG_OPTEE=y
+# CONFIG_OPTEE=y
 CONFIG_EFI_VARS=y
 CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE=y
 CONFIG_EXT4_FS=y
@@ -579,3 +580,45 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRC_T10DIF=y
+CONFIG_OF=y
+CONFIG_XEN=y
+CONFIG_PARAVIRT=y
+CONFIG_HVC_DRIVER=y
+CONFIG_HVC_XEN=y
+CONFIG_XEN_FBDEV_FRONTEND=y
+CONFIG_XEN_BLKDEV_FRONTEND=y
+CONFIG_XEN_NETDEV_FRONTEND=y
+CONFIG_XEN_PCIDEV_FRONTEND=y
+CONFIG_INPUT_XEN_KBDDEV_FRONTEND=y
+CONFIG_XEN_FBDEV_FRONTEND=y
+CONFIG_XEN_XENBUS_FRONTEND=y
+CONFIG_XEN_SAVE_RESTORE=y
+CONFIG_XEN_GRANT_DEV_ALLOC=y
+CONFIG_XEN_DOM0=y
+CONFIG_XEN_PRIVILEGED_GUEST=y
+CONFIG_XEN_DEV_EVTCHN=y
+CONFIG_XENFS=y
+CONFIG_XEN_COMPAT_XENFS=y
+CONFIG_XEN_SYS_HYPERVISOR=y
+CONFIG_XEN_GNTDEV=y
+CONFIG_XEN_BACKEND=y
+CONFIG_XEN_NETDEV_BACKEND=m
+CONFIG_XEN_BLKDEV_BACKEND=m
+CONFIG_XEN_BALLOON=y
+CONFIG_XEN_SCRUB_PAGES=y
+CONFIG_XEN_EFI=y
+CONFIG_XEN_AUTO_XLATE=y
+CONFIG_SWIOTLB_XEN=y
+CONFIG_HVC_XEN_FRONTEND=y
+CONFIG_XEN_PRIVCMD=y
+CONFIG_XEN_SCSI_BACKEND=y
+CONFIG_XEN_SCSI_FRONTEND=y
+# CONFIG_NETXEN_NIC=y
+CONFIG_TCG_XEN=y
+# CONFIG_XEN_AUTO_XLATE=y
+# CONFIG_XEN_WDT=y
+CONFIG_SHROBUF=y
+CONFIG_MMU=y
+CONFIG_IOMMU_SUPPORT=y
+CONFIG_ARM_SMMU=y
+CONFIG_HISI_IOMMU_LPAE=y
