--- a/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
+++ b/arch/arm64/boot/dts/hisilicon/hi6220-hikey.dts
@@ -26,12 +26,14 @@
 		stdout-path = "serial3:115200n8";
 	};
 
+/* Remove this due to conflicting assignments of IRQ
 	fiq-debugger {
 		compatible = "android,irq-hi6220-uart";
 		reg = <0x0 0xf7113000 0x0 0x1000>;
 		interrupts = <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>;
 		interrupt-names = "fiq", "signal";
 	};
+*/
 
 	uart_overlay@0 {
 		fragment@0 {
