--- a/arch/arm64/boot/dts/hisilicon/hi6220.dtsi
+++ b/arch/arm64/boot/dts/hisilicon/hi6220.dtsi
@@ -974,7 +974,8 @@
 
 		mali:mali@f4080000 {
 			compatible = "arm,mali-450", "arm,mali-utgard";
-			reg = <0x0 0x3f100000 0x0 0x00708000>;
+			//reg = <0x0 0x3f100000 0x0 0x00708000>;
+			reg = <0x0 0xf4080000 0x0 0x00708000>;
 			clocks = <&media_ctrl HI6220_G3D_CLK>,
 				 <&media_ctrl HI6220_G3D_PCLK>;
 			clock-names = "clk_g3d", "pclk_g3d";
@@ -1011,3 +1012,4 @@
 		};
 	};
 };
+
